# rust-nrcs

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  phase1_fix.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
.trae/documents/: core_tables_structure.json
apps/node/: Cargo.toml
apps/node/src/: api.rs  chain.rs  config.rs  main.rs  p2p.rs  services.rs
config/: default.toml  production.toml.example
crates/account/: Cargo.toml
crates/account/src/: crypto.rs  lib.rs  manager.rs  repository.rs
crates/account/tests/: crypto_tests.rs  integration_test.rs  manager_tests.rs  mod.rs
crates/blockchain-types/: Cargo.toml
crates/blockchain-types/src/: account.rs  asset.rs  block.rs  lib.rs  transaction.rs
crates/blockchain-types/tests/: account_tests.rs  block_tests.rs  mod.rs  serialization_tests.rs  transaction_tests.rs  types_tests.rs  validation_tests.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  pos.rs  pow.rs
crates/consensus/tests/: consensus_tests.rs  integration_tests.rs  mod.rs  pos_tests.rs  pow_tests.rs
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: algorithms.rs  config.rs  crypto.rs  keypair.rs  keys.rs  lib.rs  sm3.rs  traits.rs
crates/crypto/src/cipher/: aes.rs  mod.rs
crates/crypto/src/hash/: mod.rs  sha256.rs  sm3.rs
crates/crypto/src/impls/: cipher.rs  hash.rs  mod.rs  signature.rs
crates/crypto/src/signature/: ed25519.rs  mod.rs  sm2.rs
crates/crypto/src/sm2/: keypair.rs  mod.rs  signature.rs
crates/crypto/src/sm4/: cbc.rs  cipher.rs  gcm.rs  mod.rs
crates/crypto/tests/: hashing_tests.rs  key_management_tests.rs  mod.rs  signature_tests.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: config.rs  error.rs  lib.rs  response.rs  routes.rs  state.rs
crates/http-api/src/handlers/: account.rs  block.rs  contract.rs  mod.rs  node.rs  system.rs  transaction.rs
crates/http-api/tests/: api_integration_test.rs
crates/orm/: Cargo.toml  README.md  schema_analysis.json
crates/orm/docs/: orm-models-coverage.md
crates/orm/migrations/: 001_initial.sql
crates/orm/src/: generated_model_tests.rs  generated_models.rs  lib.rs  models.rs  models.rs.org  repository.rs  repository.rs.org
crates/orm/src/repository/: mod.rs  pg.rs  traits.rs
crates/orm/tests/: mod.rs  models_tests.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: http.rs  lib.rs  peer.rs  protocol.rs  service.rs  websocket.rs
crates/p2p/src/handlers/: add_peers.rs  bundler_rate.rs  get_cumulative_difficulty.rs  get_info.rs  get_milestone_block_ids.rs  get_next_block_ids.rs  get_next_blocks.rs  get_peers.rs  get_transactions.rs  mod.rs  process_block.rs  process_transactions.rs  unknown.rs
crates/tx-engine/: Cargo.toml
crates/tx-engine/src/: lib.rs  mempool.rs  processor.rs  types.rs
crates/tx-engine/tests/: mempool_tests.rs  mod.rs  processor_tests.rs  types_tests.rs
docker/: backend.Dockerfile  docker-compose.yml  env.sh  frontend.Dockerfile  nginx.conf
docs/: api-integration-design.md  architecture.md  database-schema.md  deployment.md  frontend-architecture.md  migration-guide.md  monitoring.md  quickstart.md  技术栈选型.md  调整笔记.md
docs/ops/: backup-restore.md  security-hardening.md  troubleshooting.md
frontend/: .env.development  .env.example  .env.production  .eslintrc.cjs  .gitignore  .prettierrc  README.md  cypress.config.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/cypress/: cypress.config.ts
frontend/cypress/e2e/: block_explorer.cy.ts  dashboard.cy.ts  login.cy.ts  transaction.cy.ts
frontend/cypress/support/: index.ts
frontend/public/: manifest.json
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: client.ts
frontend/src/api/modules/: account.api.ts  account.ts  contract.api.ts  contract.ts  index.ts  node.api.ts  node.ts  transaction.api.ts  transaction.ts
frontend/src/assets/styles/: index.scss  variables.scss
frontend/src/components/base/: BaseButton.vue  BaseDialog.vue  BaseForm.vue  BaseTable.vue  StatusBadge.vue
frontend/src/components/layout/: Breadcrumb.vue  Header.vue  MainLayout.vue  Sidebar.vue  SubLayout.vue
frontend/src/locales/: en-US.ts  index.ts  zh-CN.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.store.ts  app.ts  index.ts
frontend/src/stores/account/: index.ts
frontend/src/stores/modules/: account.store.ts  contract.store.ts  index.ts  node.store.ts  transaction.store.ts  ui.store.ts
frontend/src/styles/: element-plus.scss  index.scss  mixins.scss  variables.scss
frontend/src/tests/: setup.ts
frontend/src/types/: api.ts  blockchain.ts  business.ts  common.ts  enums.ts  index.ts  router.ts  user.ts
frontend/src/utils/: crypto.ts  format.ts
frontend/src/views/: Dashboard.vue  Forbidden.vue  Login.vue  NotFound.vue
frontend/src/views/account/: AccountDetail.vue  AccountList.vue  Login.vue  PermissionList.vue  Profile.vue  Register.vue  RoleList.vue  Security.vue  TokenBalances.vue  TransactionHistory.vue  UserList.vue  UserProfile.vue  WalletConnect.vue
frontend/src/views/contract/: ContractDeploy.vue  ContractDetail.vue  ContractList.vue  ContractVerify.vue  DeployContract.vue  EventLogs.vue  StorageViewer.vue
frontend/src/views/dashboard/: Dashboard.vue
frontend/src/views/error/: Forbidden.vue  NotFound.vue
frontend/src/views/node/: BlockList.vue  NodeBlocks.vue  NodeMonitor.vue  NodePeers.vue  (+2 more)
frontend/tests/unit/: login.spec.ts  stores.spec.ts  transaction.spec.ts
migrations/h2/: 0.sql
migrations/mysql/: 0.sql
migrations/postgres/: 0.sql
migrations/sqlite/: 0.sql
tests/integration/: api_compatibility.spec.ts
tests/p2p-integration/: README.md
tests/performance/: README.md  benchmark_config.json  load_test.k6.js
tools/: Cargo.toml  append-include.ps1  append-lib.ps1  extract_core_tables.ps1  gen_all_tests.ps1  gen_coverage_doc.ps1  gen_models.ps1  gen_models.rs  gen_schema_analysis.rs  gen_tests.ps1  list-tables.ps1  parse-schema.ps1
tools/src/: main.rs
(+8 files in other folders)
