[package]
name = "account"
version = "0.1.0"
edition = "2021"
description = "Account management for NRCS blockchain"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
# 区块链核心类型
blockchain-types = { path = "../blockchain-types" }

# 数据访问层
orm = { path = "../orm" }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 并发
tokio = { version = "1.0", features = ["sync"] }
dashmap = "5.0"
parking_lot = "0.12"

# 加密
ed25519-dalek = "2.0"
rand = "0.8"
base58 = "0.2"

# 日志
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"