[package]
name = "account"
version = "0.1.0"
edition = "2021"
description = "Account management for NRCS blockchain"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
# 区块链核心类型
blockchain-types = { path = "../blockchain-types" }

# 数据访问层
orm = { path = "../orm" }

# 加密层
crypto = { path = "../crypto" }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 并发
tokio = { version = "1.0", features = ["sync"] }
dashmap = "5.0"
parking_lot = "0.12"

# 编码
base58 = "0.2"

# Trait
async-trait = "0.1"

# 日志
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"