[package]
name = "blockchain-types"
version = "0.1.0"
edition = "2021"
description = "Core blockchain data structures for NRCS platform"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
thiserror = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
fxd = { version = "0.1", optional = true } # Decimal type, optional

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = []
# 启用十进制精度支持（用于资产、金额）
decimal = ["dep:fxd"]
