[package]
name = "contract"
version = "0.1.0"
edition = "2021"
description = "Smart contract engine for NRCS blockchain (WASM runtime)"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
blockchain-types = { path = "../blockchain-types" }
wasmtime = { version = "18.0", features = ["async"] }
wasmtime-wasi = "18.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
