[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for NRCS blockchain (signatures, hashing)"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
blockchain-types = { path = "../blockchain-types" }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
blake3 = "1.0"
thiserror = "1.0"
zeroize = "1.6" # 安全内存清除

# 配置管理
config = { version = "0.13", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"

# 国密算法库
sm2 = "0.14.0-rc.8"
sm3 = "0.5.0"
sm4 = "0.6.0-rc.3"

# SM4-GCM 模式支持
sm4-gcm = "0.1.2"

# AES 及其模式（统一使用 0.8 版本）
aes = "0.8"
aes-gcm = "0.10"

# NOTE: AES-CBC 暂时禁用，因其依赖的 cbc crate 版本冲突
# cbc = "0.2"  # 需要时再启用

[dev-dependencies]
criterion = "0.5"
hex = "0.4"
