[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT OR Apache-2.0"
description = "Pluggable cryptography for NRCS with SM2/SM3/SM4 support"
repository = "https://github.com/byteuser1977/rust-nrcs"
readme = "README.md"
keywords = ["crypto", "sm2", "sm3", "sm4", "national-cryptography"]
categories = ["cryptography", "science::cryptography"]

[dependencies]
# Standard algorithms
sha2 = "0.10"
ed25519-dalek = "2.0"
aes = "0.8"
aes-gcm = "0.11.0-rc.3"
cbc = "0.2.0-rc.4"

# National cryptography (GM/T standards)
sm2 = "0.14.0-rc.8"
sm3 = "0.5.0"
sm4 = "0.6.0-rc.3"

# Configuration
config = { version = "0.13", default-features = false, features = ["json", "toml", "yaml"] }
once_cell = "1.18"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Random number generation
rand = "0.10"

[dev-dependencies]
hex = "0.4"
proptest = "1.0"
criterion = "0.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"