[package]
name = "http-api"
version = "0.1.0"
edition = "2021"
description = "HTTP REST API for NRCS blockchain node"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
# Web 框架（选择 Axum）
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace", "request-id"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 区块链核心类型
blockchain-types = { path = "../blockchain-types" }

# 数据访问层
orm = { path = "../orm" }
tx-engine = { path = "../tx-engine" }
account = { path = "../account" }

# 配置
config = { version = "0.13", features = ["json", "toml", "yaml"] }
figment = { version = "0.10", features = ["env", "json", "toml", "yaml"] }

# 工具
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.11", features = ["json"] }