[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking layer for NRCS blockchain using libp2p"
license = "Apache-2.0"
authors = ["ByteChain <dev@bytechain.cn>"]

[dependencies]
blockchain-types = { path = "../blockchain-types" }
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "websocket", "dns", "identify", "ping", "yamux", "noise", "gossipsub", "kad"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
