[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
futures-util = "0.3"
thiserror = "1.0"
once_cell = "1.18"
axum = "0.7"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }